# everest-core

./: MODULE.bazel  WORKSPACE.bazel  upstream_commit_hash
.ci/e2e/: docker-compose.yaml
.devcontainer/: docker-compose.yml
.devcontainer/general-devcontainer/: Dockerfile
.github/workflows/: bazel_build_and_test.yaml  build_and_test.yaml  dco-check.yaml  unit_test.yml
applications/containers/nodered/: Dockerfile
applications/containers/steve/: Dockerfile
applications/dev-environment/devcontainer/template/.devcontainer/: docker-compose.yml
applications/dev-environment/docker/: docker-compose.yml
applications/utils/: MODULE.bazel  requirements-bazel.txt
applications/utils/docker/everest-docker-image/: Dockerfile  docker-compose.yml
applications/utils/docker/everest-docker-image/nodered/: Dockerfile
applications/utils/everest-testing/: setup.cfg
cmake/assets/docker/: Dockerfile
lib/everest/framework/: MODULE.bazel
lib/everest/framework/everestjs/: package.json
lib/everest/framework/everestrs/everestrs/: Cargo.toml
lib/everest/framework/everestrs/everestrs-build/: Cargo.toml
lib/everest/framework/everestrs/everestrs-derive/: Cargo.toml
modules/: Cargo.toml
modules/API/RpcApi/tools/python-client-gui/: requirements.txt
modules/HardwareDrivers/Payment/RsPaymentTerminal/: Cargo.toml
modules/HardwareDrivers/PowerMeters/LemDCBM400600/utils/lem_dcbm_api_mock/: pyproject.toml
modules/HardwareDrivers/PowerMeters/RsIskraMeter/: Cargo.toml
modules/JsTibber/: package.json
modules/LemDCBM400600/utils/lem_dcbm_api_mock/: pyproject.toml
modules/RsIskraMeter/: Cargo.toml
modules/RsPaymentTerminal/: Cargo.toml
