workspace(name = "everest-core")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_PYTHON_SHA = "c68bdc4fbec25de5b5493b8819cfc877c4ea299c0dcb15c244c5a00208cde311"
RULES_PYTHON_VERSION = "0.31.0"

http_archive(
    name = "rules_python",
    sha256 = RULES_PYTHON_SHA,
    strip_prefix = "rules_python-{}".format(RULES_PYTHON_VERSION),
    url = "https://github.com/bazelbuild/rules_python/releases/download/{}/rules_python-{}.tar.gz".format(
        RULES_PYTHON_VERSION, RULES_PYTHON_VERSION),
)
load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3_10",
    python_version = "3.10",
)

http_archive(
    name = "rules_rust",
    sha256 = "671ddb3fe5ebcf9dd34d051eca7352fbaf33fa53bf61eed0b75a4c34829e5480",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.52.2/rules_rust-v0.52.2.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    versions = ["1.74.0"],
    edition="2021",
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("//third-party/bazel:repos.bzl", "everest_core_repos")

everest_core_repos()

load("//third-party/bazel:defs.bzl", "everest_core_defs")

everest_core_defs()

load("@everest-framework//third-party/bazel:repos.bzl", "everest_framework_repos")

everest_framework_repos()

load("@everest-framework//third-party/bazel:defs.bzl", "everest_framework_deps")

everest_framework_deps()

load("@everest-utils//third-party/bazel:defs.bzl", "everest_utils_defs")

everest_utils_defs()
